--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^89.0.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
@@ -68,7 +69,7 @@
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
     "node-cron": "^3.0.0",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "^6.7.0",
     "validator": "^13.6.0",
     "winston": "^3.3.3"
   },
