fix: fix the signup endpoint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rimraf dist && tsc",
     "dev": "nodemon",
     "start": "node dist/server.js",
-    "test": "npm run build && mocha dist --timeout 25000 --recursive  --exit",
+    "test": "NODE_ENV=test npm run build && mocha dist --timeout 25000 --recursive  --exit",
     "new-test": "npm run build && mocha dist/controllers/auth/test/login.js --timeout 25000 --recursive  --exit",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet --fix",
     "format": "prettier --write src/",
