--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.21",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mocha": "^9.0.0",
@@ -59,6 +60,7 @@
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^89.0.0",
